--- a/src/WebLabs/conf/asset-pipeline.conf
+++ b/src/WebLabs/conf/asset-pipeline.conf
@@ -1,6 +1,6 @@
 #paths where assets stored(Devided by comma)
 assets_dirs = static/include
 #path to js/css
-public_dirs = static,static/coffee
+public_dirs = static,static/coffee,static/scss
 #where to put compiled assets files
 temp_dir = static/temp
